[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["Lisheng Zheng <zls1129@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
notify = "4.0.0"
indicatif = "0.9.0"
console = "0.6.2"
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1"

[[bin]]
name = "leetcode"

[lib]
doctest = false
test = true
